# ws_px4_work

./: .gitignore  .gitmodules  README.md  makefile  plan.md
.claude/: .gitignore
.claude/memory/: MEMORY.md  build-and-verify.md  px4-stack-git-workflow.md  readme-style-system.md  user-profile.md
data_analysis/: CPP_vs_JAX_Comparison.ipynb  Controller_Comparisons.ipynb  NMPC_Analysis.ipynb  NR_Standard_Analysis.ipynb
data_analysis/log_files/ff_f8_px4/: hw_ff_f8_1x.csv
data_analysis/log_files/newton_raphson_px4/: sim_nr_std_circle_horz_2x.csv  sim_nr_std_fig8_horz_2x.csv
data_analysis/log_files/nmpc_acados_px4/: sim_nmpc_acados_px4_f8_contraction_2x.csv
data_analysis/log_files/nmpc_acados_px4_cpp/: sim_nmpc_acados_px4_helix_1x_spin.csv
data_analysis/output/: cpp_vs_jax_comp_times.csv  cpp_vs_jax_rmse.csv
docker/: Dockerfile
ff_f8_px4/: README.md  commands.md  package.xml  setup.cfg  setup.py  test_hardware_commands.md  test_sim_commands.md
ff_f8_px4/docs/: ff_f8_controller.qmd
ff_f8_px4/ff_f8_px4/: ros2px4_node.py  run_node.py
offboard_cpp/: package.xml
offboard_cpp/src/: offboard_node.cpp  run_node.cpp
src/: makefile
src/data_analysis/: NR_Enhanced_Analysis.ipynb  README.md  SingleLogAnalysis.ipynb
src/data_analysis/output/: cpp_vs_jax_speedup.csv
src/docker/: requirements.txt
src/ff_f8_px4/: README.md  commands.md  package.xml  setup.py
src/ff_f8_px4/docs/: ff_f8_controller.qmd
src/ff_f8_px4/ff_f8_px4/: ros2px4_node.py  run_node.py
src/offboard_cpp/: CMakeLists.txt
src/offboard_cpp/include/offboard_cpp/: offboard_node.hpp
(+14 files in other folders)
